package vn.demo.nike.features.user.enums;

public enum Role {
    USER,
    ADMIN
}
