package vn.demo.nike.features.user.request;

public interface CurrentUserProvider {
    Long getCurrentUserId();
}
